Changes to Auth and rosters: Added Favorite Player
